--- a/app/gulp/package.json
+++ b/app/gulp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulptest",
+  "name": "LoraGulp",
   "version": "1.0.0",
-  "description": "Test de mise en place gulp",
+  "description": "Package for Loratex",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,7 @@
     "clean-css": "^4.1.9",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^6.2.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
