Change gulp and imgMin version

--- a/app/gulp/package.json
+++ b/app/gulp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LoraGulp",
+  "name": "loratex",
   "version": "1.0.0",
   "description": "Package for Loratex",
   "main": "index.js",
